--- a/mod/localisation/ancient_formations_l_english.yml
+++ b/mod/localisation/ancient_formations_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
  babylonian_nation_title:0 "Form Babylonian Nation"
  babylonian_nation_desc:0 "Re-embrace the culture of years past and found the new Babylonian nation!"
- 
+ phoenicia_nation_title:0 "Form Phoenician Nation"
+ phoenicia_nation_desc:0 "Re-embrace the culture of years past and found the new Phoenician nation!"
