--- a/mod/localisation/ancient_formations_l_english.yml
+++ b/mod/localisation/ancient_formations_l_english.yml
@@ -3,3 +3,5 @@
  babylonian_nation_desc:0 "Re-embrace the culture of years past and found the new Babylonian nation!"
  phoenicia_nation_title:0 "Form Phoenician Nation"
  phoenicia_nation_desc:0 "Re-embrace the culture of years past and found the new Phoenician nation!"
+ atlantis_nation_title:0 "Form Atlantean Nation"
+ atlantis_nation_desc:0 "Re-embrace the culture of years past and found the new Atlantean nation!"
