--- a/mod/localisation/excavation_l_english.yml
+++ b/mod/localisation/excavation_l_english.yml
@@ -1,11 +1,16 @@
 ﻿l_english:
- excavation.bab.t:0 "Excavating the City of Babylon"
- excavation.bab.d:0 "By investigating the ruins and artifacts from the city of old, it should be possible for the ancient Babylonian culture to resurface."
- excavation.bab.a:0 "Proceed."
+ excavation.1.t:0 "Excavating the City of Babylon"
+ excavation.1.d:0 "By investigating the ruins and artifacts from the city of old, it should be possible for the ancient Babylonian culture to resurface."
+ excavation.1.a:0 "Proceed."
  babylon_dig_title:0 "Babylonian Excavation"
- babylon_dig_desc:0 "Excavate the city in attempt to ressurect the culture of ancient times." excavation.bab.t:0 "Excavating the City of Babylon"
- excavation.pho.t:0 "Excavating the City of Phoenicia
- excavation.pho.d:0 "By investigating the ruins and artifacts from the city of old, it should be possible for the ancient Phoenician culture to resurface."
- excavation.pho.a:0 "Proceed."
+ babylon_dig_desc:0 "Excavate the city in attempt to ressurect the culture of ancient times." 
+ excavation.2.t:0 "Excavating the City of Phoenicia"
+ excavation.2.d:0 "By investigating the ruins and artifacts from the city of old, it should be possible for the ancient Phoenician culture to resurface."
+ excavation.2.a:0 "Proceed."
  phoenicia_dig_title:0 "Phoenician Excavation"
  phoenicia_dig_desc:0 "Excavate the city in attempt to ressurect the culture of ancient times."
+ excavation.3.t:0 "Exploring the Atlantean Ruins"
+ excavation.3.d:0 "After closely examining the ruins, something became clear: it was the last hope of a civilization, of refugees fleeing a cataclysmic event. While they did not survive, it is possible their culture and traditions will."
+ excavation.3.a:0 "Bon voyage, Atlantis."
+ atlantis_dig_title:0 "Atlantean Exploration"
+ atlantis_dig_desc:0 "One of our tribesmen found... something. Further investigation is warranted"
