--- a/mod/localisation/ancient_formations_l_english.yml
+++ b/mod/localisation/ancient_formations_l_english.yml
@@ -5,3 +5,5 @@
  phoenicia_nation_desc:0 "Re-embrace the culture of years past and found the new Phoenician nation!"
  atlantis_nation_title:0 "Form Atlantean Nation"
  atlantis_nation_desc:0 "Re-embrace the culture of years past and found the new Atlantean nation!"
+ sparta_nation_title:0 "Form Spartan Nation"
+ sparta_nation_desc:0 "Re-embrace the culture of years past and found the new Spartan nation!"
